code cleanup assets/plugins/*

--- a/assets/plugins/managermanager/widgets/ddmultiplefields/ddmultiplefields.css
+++ b/assets/plugins/managermanager/widgets/ddmultiplefields/ddmultiplefields.css
@@ -1,69 +1,87 @@
 .ddMultipleField {
-	display: block;
-	border-collapse: collapse;
-	position: relative;
+    display: block;
+    border-collapse: collapse;
+    position: relative;
 }
 
 .ddMultipleField input {
-	border: 1px solid #C8C8C8 !important;
-	font: 12px/1.2em Verdana,Helvetica,sans-serif;
-	height: 1.2em;
-	padding: 0.2em 0.533em 0.333em;
-	margin-right: 5px;
+    border: 1px solid #C8C8C8 !important;
+    font: 12px/1.2em Verdana, Helvetica, sans-serif;
+    height: 1.2em;
+    padding: 0.2em 0.533em 0.333em;
+    margin-right: 5px;
 }
 
-.ddMultipleField input:focus {border-color: #E1A020 !important;}
+.ddMultipleField input:focus {
+    border-color: #E1A020 !important;
+}
 
 .ddMultipleField tr th, .ddMultipleField tr td.ddFieldCol, .ddMultipleField tr td.ddSortHandle {
-	min-height: 23px;
-	padding: 5px 0 5px 7px;
-	vertical-align: top;
-	white-space: nowrap;
+    min-height: 23px;
+    padding: 5px 0 5px 7px;
+    vertical-align: top;
+    white-space: nowrap;
 }
 
-.ddMultipleField tr th {text-align: left;}
+.ddMultipleField tr th {
+    text-align: left;
+}
 
 .ddMultipleField tr td.ddFieldCol,
 .ddMultipleField tr td.ddSortHandle {
-	border: 2px solid #FFFFFF;
-	background: #D9F1FF;
+    border: 2px solid #FFFFFF;
+    background: #D9F1FF;
 }
+
 .ddMultipleField tr td.ddFieldCol:first-child,
-.ddMultipleField tr td.ddSortHandle:first-child {border-radius: 7px 0 0 7px;}
+.ddMultipleField tr td.ddSortHandle:first-child {
+    border-radius: 7px 0 0 7px;
+}
+
 .ddMultipleField tr td.ddFieldCol:last-child,
-.ddMultipleField tr td.ddSortHandle:last-child{border-radius: 0 7px 7px 0;}
+.ddMultipleField tr td.ddSortHandle:last-child {
+    border-radius: 0 7px 7px 0;
+}
 
 .ddMultipleField tr .ddSortHandle {
-	border-right: none;
-	width: 16px;
-	padding: 0;
-	vertical-align: middle;
+    border-right: none;
+    width: 16px;
+    padding: 0;
+    vertical-align: middle;
 }
 
 .ddMultipleField tr td.ddFieldCol:nth-child(2),
-.ddMultipleField tr td.ddSortHandle:nth-child(2) {border-left: none;}
+.ddMultipleField tr td.ddSortHandle:nth-child(2) {
+    border-left: none;
+}
 
 .ddMultipleField tr .ddSortHandle div {
-	border-radius: 0 12px 12px 0;
-	background: #007CC3;
-	width: 10px;
-	height: 23px;
-	opacity: .3;
-	cursor: move;
+    border-radius: 0 12px 12px 0;
+    background: #007CC3;
+    width: 10px;
+    height: 23px;
+    opacity: .3;
+    cursor: move;
 }
 
 .ddMultipleField tr:hover td.ddFieldCol,
-.ddMultipleField tr:hover td.ddSortHandle {background: #B2E3FF;}
+.ddMultipleField tr:hover td.ddSortHandle {
+    background: #B2E3FF;
+}
 
-.ddMultipleField tr:hover .ddSortHandle div {opacity: 1;}
+.ddMultipleField tr:hover .ddSortHandle div {
+    opacity: 1;
+}
 
 .ddMultipleField .ui-state-highlight td.ddFieldCol,
-.ddMultipleField .ui-state-highlight td.ddSortHandle {padding: 0;}
+.ddMultipleField .ui-state-highlight td.ddSortHandle {
+    padding: 0;
+}
 
 .ddMultipleField .ui-state-highlight div {
-	border: 1px solid #84c225;
-	border-radius: 3px;
-	background: #f0f0f0;
-	width: 100%;
-	height: 100%;
+    border: 1px solid #84c225;
+    border-radius: 3px;
+    background: #f0f0f0;
+    width: 100%;
+    height: 100%;
 }
